tests/fail/pop_empty_stack.avm
; pop on an empty stack
pop
